developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_be_at_most_n_chars_long-store.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_be_at_most_n_chars_long-store'

begin unicode > use(main)

store(12345678901234567890123456789012345678901234567890123456789012345678901234567890) 'test'

group(main) using keys
  + [K_A] > 'a'
